Fixing footer on smaller resulutions

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -146,7 +146,7 @@ nav a{
   float: left;
   width: 25%;
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1em;
   color: #444444;
 }
 
@@ -158,7 +158,6 @@ nav a{
 a{
   color: #333333;
   text-decoration:none;
-  text-transform: uppercase;
 }
 
 
@@ -169,6 +168,7 @@ section.content header{
   -moz-border-radius-bottomleft: 0.5em;
   border-bottom-right-radius: 0.5em;
   border-bottom-left-radius: 0.5em;
+overflow: hidden;
 }
 
 section.content header h1{
@@ -176,21 +176,26 @@ section.content header h1{
 }
 
 section.content footer{
-  position: fixed;
-  bottom: 0;
-  width: inherit;
+  width: 100%;
   -webkit-border-top-left-radius: 0.5em;
 -webkit-border-top-right-radius: 0.5em;
 -moz-border-radius-topleft: 0.5em;
 -moz-border-radius-topright: 0.5em;
 border-top-left-radius: 0.5em;
 border-top-right-radius: 0.5em;
+overflow: hidden;
+position: relative;
+}
+
+section.content footer ul {
+	width: 100%;
 }
 
 section.content footer ul li{
   display: block;
   float: left;
   width: 33%;
+padding: 10px 0 10px;
   text-align: center;
 }
 
@@ -202,6 +207,8 @@ aside.beta{
   background-color: #444444;
   padding: 1em;
 }
+
+p { line-height: 1.25em; }
 
 div.selector{
   height: 100%;
